--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   auto_route: ^7.7.0
   flutter_svg: ^2.0.7
   smooth_page_indicator: ^1.1.0
+  flutter_config: ^2.0.2
 
 dev_dependencies:
   flutter_test:
