--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,6 +24,12 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
+project.ext.envConfigFiles = [
+        dev               : ".env",
+        production        : ".env.prod",
+]
+apply from: project(':flutter_config').projectDir.getPath() + "/dotenv.gradle"
+
 
 android {
     namespace "com.example.todyapp"
@@ -35,6 +41,16 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    flavorDimensions "environment"
+    productFlavors {
+        develop {
+            dimension "environment"
+        }
+        production {
+            dimension "environment"
+        }
+    }
+
     kotlinOptions {
         jvmTarget = '1.8'
     }
@@ -44,12 +60,10 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.todyapp"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
+        applicationId project.env.get("APP_ID")
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
+        resValue "string", "build_config_package", "com.example.todyapp"
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
