--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,16 @@ dependencies:
   flutter_svg: ^2.0.7
   smooth_page_indicator: ^1.1.0
   flutter_config: ^2.0.2
+  bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
+  awesome_snackbar_content: ^0.1.3
+  flutter_easyloading: ^3.0.5
+
+  cloud_firestore: ^4.8.4
+  firebase_auth: ^4.7.2
+  firebase_core: ^2.15.0
+
+
 
 dev_dependencies:
   flutter_test:
