--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -22,15 +22,16 @@
 		<string>$(FLUTTER_BUILD_NAME)</string>
 		<key>CFBundleSignature</key>
 		<string>????</string>
-		<!-- Google Sign-in Section -->
 		<key>CFBundleURLTypes</key>
 		<array>
 			<dict>
 				<key>CFBundleTypeRole</key>
 				<string>Editor</string>
+				<key>CFBundleURLName</key>
+				<string>viettran.todyapp</string>
 				<key>CFBundleURLSchemes</key>
 				<array>
-					<string>com.googleusercontent.apps.1051953642528-v49kug42cj8hptsucle0kel3f1qd8kca</string>
+					<string>todyapp</string>
 				</array>
 			</dict>
 			<dict>
@@ -38,11 +39,20 @@
 				<string>Editor</string>
 				<key>CFBundleURLSchemes</key>
 				<array>
-					<string>com.googleusercontent.apps.1051953642528-gfl0ha48aj8a7u5m7535ta3k90fempkc</string>
+					<string>
+						com.googleusercontent.apps.1051953642528-v49kug42cj8hptsucle0kel3f1qd8kca</string>
+				</array>
+			</dict>
+			<dict>
+				<key>CFBundleTypeRole</key>
+				<string>Editor</string>
+				<key>CFBundleURLSchemes</key>
+				<array>
+					<string>
+						com.googleusercontent.apps.1051953642528-gfl0ha48aj8a7u5m7535ta3k90fempkc</string>
 				</array>
 			</dict>
 		</array>
-		<!-- End of the Google Sign-in Section -->
 		<key>CFBundleVersion</key>
 		<string>$(FLUTTER_BUILD_NUMBER)</string>
 		<key>LSRequiresIPhoneOS</key>
