--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,6 @@ dependencies:
   flutter_config: ^2.0.2
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
-  awesome_snackbar_content: ^0.1.3
   flutter_easyloading: ^3.0.5
 
   cloud_firestore: ^4.8.4
@@ -61,3 +60,7 @@ flutter:
       fonts:
         - asset: assets/fonts/Helvetica-Bold.ttf
           weight: 700
+    - family: LondrinaSolid
+      fonts:
+        - asset: assets/fonts/LondrinaSolid-Regular.ttf
+          weight: 400
