--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   app_links: ^3.4.3
   dio: ^5.3.2
   cached_network_image: ^3.2.3
+  flutter_secure_storage: ^8.0.0
+  get_it: ^7.6.0
 
 
 
