--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,18 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_easyloading: ^3.0.5
 
-  cloud_firestore: ^4.8.4
-  firebase_auth: ^4.7.2
-  firebase_core: ^2.15.0
   app_links: ^3.4.3
   dio: ^5.3.2
   cached_network_image: ^3.2.3
   flutter_secure_storage: ^8.0.0
   get_it: ^7.6.0
 
+  firebase_auth: ^4.7.2
+  cloud_firestore: ^4.8.4
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.6
+  image_picker: ^1.0.2
+  path: ^1.8.3
 
 
 dev_dependencies:
