--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_storage: ^11.2.6
   image_picker: ^1.0.2
+  
   path: ^1.8.3
+  google_sign_in: ^6.1.4
 
 
 dev_dependencies:
